fixed watermark z-index

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -278,10 +278,9 @@ body {
 }
 
 
-
-
 .watermark {
   position: absolute;
+  z-index: -999;
   top: 0px;
   left: 0px;
   width: 100%;
